--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -16,6 +16,14 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
 
     <link rel="apple-touch-icon" href="./../src/assets/logo-min.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -33,5 +41,10 @@
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
+    <!-- <script type="text/javascript">
+      if (screen.width <= 699) {
+        document.location = "mobile.html";
+      }
+    </script> -->
   </body>
 </html>
